// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should show a radio-selected icon when checked 1`] = `
<div
  aria-checked="true"
  role="radio"
>
  <label
    class="radio"
    for="radio-3"
  >
    <input
      checked=""
      class="input"
      id="radio-3"
      tabindex="0"
      type="radio"
      value=""
    />
    <span
      class="icon icon radio-selected medium"
      data-icon=""
    />
  </label>
</div>
`;

exports[`RadioButton should show a radio-unselected icon when not checked 1`] = `
<div
  aria-checked="false"
  role="radio"
>
  <label
    class="radio"
    for="radio-5"
  >
    <input
      class="input"
      id="radio-5"
      tabindex="0"
      type="radio"
      value=""
    />
    <span
      class="icon icon radio-unselected medium"
      data-icon=""
    />
  </label>
</div>
`;
